# ssh-mcp-server

./: .gitignore  README.md  pyproject.toml
src/ssh_mcp_server/: __init__.py  __main__.py  server.py
