[project]
name = "ssh-mcp-server"
version = "1.0.0"
description = "MCP Server para conectar o Claude a servidores via SSH"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Ramon", email = "ramon@example.com" }
]
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "paramiko>=3.0.0",
]
keywords = ["mcp", "ssh", "claude", "anthropic", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.scripts]
ssh-mcp-server = "ssh_mcp_server:main"

[project.urls]
Homepage = "https://github.com/seu-usuario/ssh-mcp-server"
Repository = "https://github.com/seu-usuario/ssh-mcp-server"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ssh_mcp_server"]
